<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_tips_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_network_tips_red"
        android:paddingStart="@dimen/max_x_gap_margin"
        android:paddingTop="@dimen/max_gap_margin"
        android:paddingBottom="@dimen/max_gap_margin"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tv_tips_network_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_connect_fail_title_tips_str"
            android:textColor="@color/white"
            android:textSize="@dimen/common_text_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_tips_socket_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableStart="@drawable/ic_room_sdk_socket_inconnect"
            android:drawablePadding="@dimen/mid_gap_margin"
            android:text="@string/socket_connect_fail_title_tips_str"
            android:textColor="@color/white"
            android:textSize="@dimen/common_text_size_large"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/max_gap_margin"
            android:src="@drawable/ic_room_sdk_tips_open"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_tips_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dd000000"
        android:padding="@dimen/max_gap_margin">

        <TextView
            android:id="@+id/tv_tips_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/max_gap_margin"
            android:lineSpacingExtra="@dimen/mid_gap_margin"
            android:text="@string/network_connect_fail_title_tips_info_str"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_connect"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <com.uuabc.classroomlib.widget.FilterImageView
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/max_gap_margin"
            android:background="@drawable/ic_room_sdk_network_reconnect_btn_bg"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tips_info"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>