<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.005" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <ImageView
        app:layout_constraintTop_toTopOf="@id/line1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/ic_room_sdk_bg_room_in_tip"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <ImageView
        android:id="@+id/iv_bell"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_room_sdk_room_bell"
        app:layout_constraintDimensionRatio="W,97:105"
        app:layout_constraintLeft_toRightOf="@id/line2"
        app:layout_constraintRight_toLeftOf="@id/line3"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="33dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/line10"
        android:background="@drawable/ic_room_sdk_start1"
        app:layout_constraintDimensionRatio="H,27:27"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="16dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        app:layout_constraintRight_toLeftOf="@id/line2"
        android:background="@drawable/ic_room_sdk_start2"
        app:layout_constraintDimensionRatio="H,16:17" />

    <ImageView
        android:id="@+id/iv_star3"
        android:layout_width="16dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/line5"
        app:layout_constraintRight_toLeftOf="@id/line3"
        android:background="@drawable/ic_room_sdk_start3"
        app:layout_constraintDimensionRatio="H,16:17" />

    <ImageView
        android:layout_width="14dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/line5"
        app:layout_constraintRight_toLeftOf="@id/iv_star3"
        android:background="@drawable/ic_room_sdk_start4"
        app:layout_constraintDimensionRatio="H,16:17" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/iv_bell"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line6"
        android:textSize="@dimen/common_text_size_xx_large"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_rank_over_class_str2" />


    <TextView
        android:id="@+id/tv_msg"
        app:layout_constraintTop_toBottomOf="@id/line6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/common_text_size_large"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_live_class_over_str" />

    <LinearLayout
        android:background="@drawable/room_sdk_shape_white_small_radius_translucent"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@id/line15"
        app:layout_constraintRight_toRightOf="@id/line16"
        app:layout_constraintTop_toBottomOf="@id/tv_msg"
        app:layout_constraintBottom_toTopOf="@id/line14"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@drawable/ic_room_sdk_diamon_rank"
                android:layout_width="50dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/tv_dia"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/common_text_size_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@drawable/ic_room_sdk_coin"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/tv_ub"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/common_text_size_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton

        android:id="@+id/btn_click"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/room_sdk_selector_over_dialog_button"
        app:layout_constraintLeft_toLeftOf="@id/line7"
        app:layout_constraintRight_toRightOf="@id/line8"
        app:layout_constraintBottom_toTopOf="@id/line11"
        app:layout_constraintTop_toBottomOf="@id/line12"
        app:layout_constraintDimensionRatio="W,120:44" />

    <TextView
        android:id="@+id/tv_tips"
        android:textColor="@color/white"
        android:textSize="@dimen/common_text_size_xx_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line12"
        android:text="@string/activity_live_over_class_comment_tips_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_do_homework"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:text="@string/activity_over_class_comment_btn_str"
        android:textColor="@color/color_group_orange"
        android:background="@drawable/room_sdk_shape_white"
        android:textSize="@dimen/common_text_size_large"
        android:visibility="visible"
        app:layout_constraintDimensionRatio="H,120:44"
        app:layout_constraintLeft_toRightOf="@id/line15"
        app:layout_constraintTop_toBottomOf="@id/tv_tips"
        app:layout_constraintRight_toLeftOf="@id/line10"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:text="@string/activity_over_class_no_comment_btn_str"
        app:layout_constraintTop_toBottomOf="@id/tv_tips"
        android:background="@drawable/room_sdk_shape_btn_white"
        android:textColor="@color/white"
        android:textSize="@dimen/common_text_size_large"
        android:visibility="visible"
        app:layout_constraintRight_toLeftOf="@id/line16"
        app:layout_constraintDimensionRatio="H,120:44"
        app:layout_constraintLeft_toRightOf="@id/line10"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>